--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Ecommerce Multiventa</title>
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
