--- a/index.html
+++ b/index.html
@@ -4,11 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <title>Ecommerce Multiventa</title>
 </head>
 <body>
     <header></header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <h1>e-commerce</h1>
+    </main>
+    <footer class="bg-dark text-light py-5 mt-4">
+        <div class="container">
+            <!-- logo -->
+            <div class="row">
+                <div class="col">
+                    <p>LOGO</p>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </div>
+                <!-- redes -->
+                <div class="col">
+                    <p class="h4">Encontranos en:</p>
+                    <p>Mapa</p>
+                    <div class="d-flex">
+
+                        <p class="mx-3">Facebook</p>
+                        <p class="mx-3">Instagram</p>
+                        <p class="mx-3">Twitter</p>
+                    </div>
+                </div>
+                <!-- horarios -->
+                <div class="col">
+                    <p class="h4">Horarios de atención:</p>
+                    <p class="lead">Lunas a Viernes: 9hs-20hs</p>
+                    <p class="lead">Sábados, Domingos y Feriados: 9hs-13hs</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
 </html>
