--- a/index.html
+++ b/index.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
+      crossorigin="anonymous"
+    />
     <title>Ecommerce Multiventa</title>
-</head>
-<body>
+  </head>
+  <body>
     <header></header>
     <main>
-        <h1>e-commerce</h1>
+      <h1>e-commerce</h1>
     </main>
     <footer class="bg-dark text-light py-5 mt-4">
-        <div class="container">
-            <!-- logo -->
-            <div class="row">
-                <div class="col">
-                    <p>LOGO</p>
-                    <a href="">
-                        <img src="" alt="">
-                    </a>
-                </div>
-                <!-- redes -->
-                <div class="col">
-                    <p class="h4">Encontranos en:</p>
-                    <p>Mapa</p>
-                    <div class="d-flex">
-
-                        <p class="mx-3">Facebook</p>
-                        <p class="mx-3">Instagram</p>
-                        <p class="mx-3">Twitter</p>
-                    </div>
-                </div>
-                <!-- horarios -->
-                <div class="col">
-                    <p class="h4">Horarios de atención:</p>
-                    <p class="lead">Lunas a Viernes: 9hs-20hs</p>
-                    <p class="lead">Sábados, Domingos y Feriados: 9hs-13hs</p>
-                </div>
+      <div class="container">
+        <!-- logo -->
+        <div class="row">
+          <div class="col">
+            <p>LOGO</p>
+            <a href="">
+              <img src="" alt="" />
+            </a>
+          </div>
+          <!-- redes -->
+          <div class="col">
+            <p class="h4">Encontranos en:</p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113927.15309576457!2d-65.29263395675282!3d-26.832841656760422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94223792d6c56903%3A0xf88d5b92b5c56527!2sSan%20Miguel%20de%20Tucum%C3%A1n%2C%20Tucum%C3%A1n!5e0!3m2!1ses-419!2sar!4v1680279724862!5m2!1ses-419!2sar"
+              width="350"
+              height="200"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+            <div class="d-flex">
+              <p class="mx-3">Facebook</p>
+              <p class="mx-3">Instagram</p>
+              <p class="mx-3">Twitter</p>
             </div>
+          </div>
+          <!-- horarios -->
+          <div class="col">
+            <p class="h4">Horarios de atención:</p>
+            <p class="lead">Lunas a Viernes: 9hs-20hs</p>
+            <p class="lead">Sábados, Domingos y Feriados: 9hs-13hs</p>
+          </div>
         </div>
+      </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
