corrijo comentarios adicionales

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </article>
       </section>
       <hr>
-      <!-- cards inferiore -->
+      <!-- cards inferiores -->
       <!-- <div class="card shadow">
         <div class="card-body">
           <h5>TítuloCard</h5>
