maquetado pag error404

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
             <div class="d-flex">
-              <p class="mx-3"><i class="fa-brands fa-facebook" style="color: #404ace;"></i>Facebook</p>
+              <a href="/pages/error404.html" class="mx-3"><i class="fa-brands fa-facebook" style="color: #404ace;"></i>Facebook</a>
               <p class="mx-3">Instagram</p>
               <p class="mx-3">Twitter</p>
             </div>
