--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Ecommerce Multiventa</title>
 </head>
 <body>
+    
+    <!--Navbar-->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -47,7 +49,7 @@
     <footer>
 
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
