error de ortografia

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,7 +47,7 @@
                       type="Text"
                       class="form-control clear-border"
                       id="floatingPassword"
-                      placeholder="NOmbre"
+                      placeholder="Nombre"
                     />
                     <label for="floatingPassword">Nombre</label>
                   </div>
